chore(upgrade): update yml for provision lifecycle

--- a/packages/fx-core/templates/core/v3Migration/spfx.app.yml
+++ b/packages/fx-core/templates/core/v3Migration/spfx.app.yml
@@ -2,6 +2,26 @@ version: 1.0.0
 
 environmentFolderPath: ./ {{~environmentFolder}}
 
+provision:
+  - uses: teamsApp/create # Creates a Teams app
+    with:
+      name: {{teamsAppName}} # Teams app name
+    # Output: following environment variable will be persisted in current environment's .env file.
+    # TEAMS_APP_ID: the id of Teams app
+  - uses: teamsApp/validateManifest # Validate using manifest schema
+    with:
+      manifestPath: ./appPackage/manifest.json # Path to manifest template
+  - uses: teamsApp/zipAppPackage # Build Teams app package with latest env value
+    with:
+      manifestPath: ./appPackage/manifest.json # Path to manifest template
+      outputZipPath: ./build/appPackage/appPackage.$\{{TEAMSFX_ENV}}.zip
+      outputJsonPath: ./build/appPackage/manifest.$\{{TEAMSFX_ENV}}.json
+  - uses: teamsApp/update # Apply the Teams app manifest to an existing Teams app. Will use the app id in manifest file to determine which Teams app to update.
+    with:
+      appPackagePath: ./build/appPackage/appPackage.$\{{TEAMSFX_ENV}}.zip # Relative path to this file. This is the path for built zip file.
+    # Output: following environment variable will be persisted in current environment's .env file.
+    # TEAMS_APP_ID: the id of Teams app
+
 deploy:
   - uses: cli/runNpmCommand
     with:
@@ -19,28 +39,6 @@ deploy:
     with:
       createAppCatalogIfNotExist: false
       packageSolutionPath: ./SPFx/config/package-solution.json
-
-registerApp:
-  - uses: teamsApp/create # Creates a Teams app
-    with:
-      name: {{teamsAppName}} # Teams app name
-    # Output: following environment variable will be persisted in current environment's .env file.
-    # TEAMS_APP_ID: the id of Teams app
-
-configureApp:
-  - uses: teamsApp/validateManifest # Validate using manifest schema
-    with:
-      manifestPath: ./appPackage/manifest.json # Path to manifest template
-  - uses: teamsApp/zipAppPackage # Build Teams app package with latest env value
-    with:
-      manifestPath: ./appPackage/manifest.json # Path to manifest template
-      outputZipPath: ./build/appPackage/appPackage.$\{{TEAMSFX_ENV}}.zip
-      outputJsonPath: ./build/appPackage/manifest.$\{{TEAMSFX_ENV}}.json
-  - uses: teamsApp/update # Apply the Teams app manifest to an existing Teams app. Will use the app id in manifest file to determine which Teams app to update.
-    with:
-      appPackagePath: ./build/appPackage/appPackage.$\{{TEAMSFX_ENV}}.zip # Relative path to this file. This is the path for built zip file.
-    # Output: following environment variable will be persisted in current environment's .env file.
-    # TEAMS_APP_ID: the id of Teams app
 
 publish:
   - uses: teamsApp/validateManifest # Validate using manifest schema
