chore(debug-upgrade): upgrade m365 projects
- remove install-app-in-teams task
- add m365Title/acquire action

--- a/packages/fx-core/templates/core/v3Migration/js.ts.app.local.yml
+++ b/packages/fx-core/templates/core/v3Migration/js.ts.app.local.yml
@@ -96,8 +96,17 @@ provision:
     # Output: following environment variable will be persisted in current environment's .env file.
     # TEAMS_APP_ID: the id of Teams app
   {{/if}}
-  {{/teamsApp}}
 
+  {{/teamsApp}}
+  {{#if isM365}}
+  - uses: m365Title/acquire # Upload your app to Outlook and the Microsoft 365 app
+    with:
+      appPackagePath: ./build/appPackage/appPackage.$\{{TEAMSFX_ENV}}.zip # Relative path to the built app package.
+    # Output: following environment variable will be persisted in current environment's .env file.
+    # M365_TITLE_ID: the id of M365 title
+    # M365_APP_ID: the app id of M365 title
+
+  {{/if}}
   {{/configureApp}}
 {{/config.provision}}
 {{#config.deploy}}
