--- a/packages/fx-core/tests/core/middleware/testAssets/v3Migration/debug/transparent-m365-me/expected/app.local.yml
+++ b/packages/fx-core/tests/core/middleware/testAssets/v3Migration/debug/transparent-m365-me/expected/app.local.yml
@@ -22,6 +22,7 @@ provision:
       description: ""
       channels:
         - name: msteams
+        - name: m365extensions
 
   - uses: teamsApp/validateManifest # Validate using manifest schema
     with:
@@ -38,6 +39,13 @@ provision:
       appPackagePath: ./build/appPackage/appPackage.${{TEAMSFX_ENV}}.zip # Relative path to this file. This is the path for built zip file.
     # Output: following environment variable will be persisted in current environment's .env file.
     # TEAMS_APP_ID: the id of Teams app
+
+  - uses: m365Title/acquire # Upload your app to Outlook and the Microsoft 365 app
+    with:
+      appPackagePath: ./build/appPackage/appPackage.${{TEAMSFX_ENV}}.zip # Relative path to the built app package.
+    # Output: following environment variable will be persisted in current environment's .env file.
+    # M365_TITLE_ID: the id of M365 title
+    # M365_APP_ID: the app id of M365 title
 
 deploy:
   - uses: file/createOrUpdateEnvironmentFile # Generate runtime environment variables
