--- a/packages/fx-core/tests/core/middleware/testAssets/v3Migration/jsFuncBotWebAppId/expectedResult/ts.app.yml
+++ b/packages/fx-core/tests/core/middleware/testAssets/v3Migration/jsFuncBotWebAppId/expectedResult/ts.app.yml
@@ -24,10 +24,12 @@ provision:
 
 deploy:
   - uses: cli/runNpmCommand
+    name: install bot dependencies
     with:
       workingDirectory: bot
       args: install
   - uses: cli/runNpmCommand
+    name: build bot app
     with:
       workingDirectory: bot
       args: run build --if-present
