chore: upgrade m365 remote

--- a/packages/vscode-extension/.vscode/launch.json
+++ b/packages/vscode-extension/.vscode/launch.json
@@ -16,9 +16,10 @@
         "${workspaceFolder}/../api/build/**/*.js"
       ],
       "env": {
+        "TEAMSFX_V3": "true",
         "NODE_ENV": "development"
       },
-      "preLaunchTask": "npm: build"
+      // "preLaunchTask": "npm: build"
     },
     {
       "name": "Run Extension with Failpoints",
