--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -95,6 +95,7 @@
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-no-secrets": "^0.8.9",
     "eslint-plugin-prettier": "^4.0.0",
+    "@microsoft/eslint-plugin-teamsfx": "^0.0.1",
     "fs-extra": "^9.1.0",
     "got": "^11.8.2",
     "isomorphic-fetch": "^3.0.0",
@@ -129,7 +130,7 @@
     "webpack": "^5.62.1",
     "yargs": "^17.2.1"
   },
-  "gitHead": "7ed6c8408af2d1921411243342a595514c987657",
+  "gitHead": "7d60c0765c0ea8c023a26c10d1c93001c597afbb",
   "publishConfig": {
     "access": "public"
   },
