--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -1482,7 +1482,7 @@
     "@azure/ms-rest-nodeauth": "^3.1.1",
     "@azure/msal-node": "^1.14.6",
     "@microsoft/teamsfx-api": "^0.22.1",
-    "@microsoft/teamsfx-core": "^1.23.2",
+    "@microsoft/teamsfx-core": "^1.23.3-rc",
     "@npmcli/package-json": "^1.0.1",
     "@vscode/extension-telemetry": "^0.6.2",
     "@vscode/webview-ui-toolkit": "^0.9.3",
