chore(upgrade): update

--- a/packages/fx-core/tests/core/middleware/testAssets/v3Migration/jsSsoTab/expectedResult/js.app.yml
+++ b/packages/fx-core/tests/core/middleware/testAssets/v3Migration/jsSsoTab/expectedResult/js.app.yml
@@ -96,4 +96,4 @@ publish:
     with:
       appPackagePath: ./build/appPackage/appPackage.${{TEAMSFX_ENV}}.zip
     writeToEnvironmentFile:
-      publishedAppId: PUBLISHED_APP_ID
+      publishedAppId: TEAMS_APP_PUBLISHED_APP_ID
