chore: declare outputs for botAadApp/create in templates

--- a/templates/scenarios/common/init-debug-vsc-bot/teamsapp.local.yml
+++ b/templates/scenarios/common/init-debug-vsc-bot/teamsapp.local.yml
@@ -9,12 +9,12 @@ provision:
     # Output: following environment variable will be persisted in current environment's .env file.
     # TEAMS_APP_ID: the id of Teams app
 
-  - uses: botAadApp/create # Creates a new AAD app for bot if BOT_ID environment variable is empty
+  - uses: botAadApp/create # Creates a new or reuses an existing AAD app for bot
     with:
       name: bot
-    # Output: following environment variable will be persisted in current environment's .env file.
-    # BOT_ID: the AAD app client id created for bot
-    # SECRET_BOT_PASSWORD: the AAD app client secret created for bot
+    writeToEnvironmentFile:
+      botId: BOT_ID
+      botPassword: SECRET_BOT_PASSWORD
 
   - uses: botFramework/create # Create or update the bot registration on dev.botframework.com
     with:
