--- a/.github/workflows/lint-pr.yml
+++ b/.github/workflows/lint-pr.yml
@@ -78,6 +78,10 @@ jobs:
         with:
           node-version: 14
 
+      - name: Install Yaml lint
+        run: |
+          pip install yamllint
+
       - name: Setup Project
         run: |
           npm run setup
@@ -107,8 +111,9 @@ jobs:
             echo '======================================= Prompt Information ==============================================='
             echo 'There may be some unformatted files in your PR, please run these commands on Git Bash terminal: '
             echo '1. npm run setup'
-            echo '2. VAR=$(realpath .github/scripts/lint-pr.sh) '
-            echo '3. npx lerna exec -- bash $VAR ${your-PR-target-branch}'
+            echo '2. pip install yamllint'
+            echo '3. VAR=$(realpath .github/scripts/lint-pr.sh) '
+            echo '4. npx lerna exec -- bash $VAR ${your-PR-target-branch}'
             echo 'please replace the ${your-PR-target-branch} as the target branch of your PR, such as origin/dev or upstream/dev'
             exit 1
           fi
