chore: update task definitation in task.json

--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -955,7 +955,7 @@
                       {}
                     ]
                   },
-                  "output": {
+                  "writeToEnvironmentFile": {
                     "type": "object",
                     "description": "%teamstoolkit.taskDefinitions.args.output.title%",
                     "properties": {
