--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -606,7 +606,7 @@
       {
         "command": "fx-extension.updateAadAppManifest",
         "title": "%teamstoolkit.commands.updateAadAppManifest.title%",
-        "enablement": "fx-extension.isTeamsFx && fx-extension.isAadManifestEnabled && isWorkspaceTrusted && !fx-extension.isV3Enabled",
+        "enablement": "fx-extension.isTeamsFx && fx-extension.isAadManifestEnabled && isWorkspaceTrusted",
         "category": "Teams"
       },
       {
