--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -1020,7 +1020,8 @@
                             {
                               "const": "private"
                             }
-                          ]
+                          ],
+                          "default": "private"
                         },
                         "writeToEnvironmentFile": {
                           "type": "object",
