chore(localdebug): dev tunnel task definitation for multiple ports (#8207)
* chore(localdebug): dev tunnel task definitation for multiple ports

* chore: add access default value in dev tunnel task definitation

--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -958,15 +958,15 @@
                   },
                   "writeToEnvironmentFile": {
                     "type": "object",
-                    "description": "%teamstoolkit.taskDefinitions.args.output.title%",
+                    "description": "%teamstoolkit.taskDefinitions.args.writeToEnvironmentFile.title%",
                     "properties": {
                       "domain": {
                         "type": "string",
-                        "description": "%teamstoolkit.taskDefinitions.args.output.domain.title%"
+                        "description": "%teamstoolkit.taskDefinitions.args.writeToEnvironmentFile.domain.title%"
                       },
                       "endpoint": {
                         "type": "string",
-                        "description": "%teamstoolkit.taskDefinitions.args.output.endpoint.title%"
+                        "description": "%teamstoolkit.taskDefinitions.args.writeToEnvironmentFile.endpoint.title%"
                       }
                     }
                   }
@@ -977,8 +977,7 @@
                 "type": "object",
                 "required": [
                   "type",
-                  "port",
-                  "protocol"
+                  "ports"
                 ],
                 "properties": {
                   "type": {
@@ -986,30 +985,63 @@
                     "description": "%teamstoolkit.taskDefinitions.args.type.title%",
                     "const": "dev-tunnel"
                   },
-                  "port": {
-                    "type": "integer",
-                    "description": "%teamstoolkit.taskDefinitions.args.port.title%"
-                  },
-                  "protocol": {
-                    "type": "string",
-                    "description": "%teamstoolkit.taskDefinitions.args.protocol.title%",                    
-                    "oneOf": [
-                      {
-                        "const": "http"
+                  "ports": {
+                    "type": "array",
+                    "description": "%teamstoolkit.taskDefinitions.args.ports.title%",
+                    "items": {
+                      "type": "object",
+                      "required": [
+                        "portNumber",
+                        "protocol"
+                      ],
+                      "properties": {
+                        "portNumber": {
+                          "type": "integer",
+                          "description": "%teamstoolkit.taskDefinitions.args.ports.portNumber.title%"
+                        },
+                        "protocol": {
+                          "type": "string",
+                          "description": "%teamstoolkit.taskDefinitions.args.ports.protocol.title%",
+                          "oneOf": [
+                            {
+                              "const": "http"
+                            },
+                            {
+                              "const": "https"
+                            }
+                          ]
+                        },
+                        "access": {
+                          "type": "string",
+                          "description": "%teamstoolkit.taskDefinitions.args.ports.access.title%",
+                          "oneOf": [
+                            {
+                              "const": "public"
+                            },
+                            {
+                              "const": "private"
+                            }
+                          ],
+                          "default": "private"
+                        },
+                        "writeToEnvironmentFile": {
+                          "type": "object",
+                          "description": "%teamstoolkit.taskDefinitions.args.writeToEnvironmentFile.title%",
+                          "properties": {
+                            "domain": {
+                              "type": "string",
+                              "description": "%teamstoolkit.taskDefinitions.args.writeToEnvironmentFile.domain.title%"
+                            },
+                            "endpoint": {
+                              "type": "string",
+                              "description": "%teamstoolkit.taskDefinitions.args.writeToEnvironmentFile.endpoint.title%"
+                            }
+                          },
+                          "additionalProperties": false
+                        }
                       },
-                      {
-                        "const": "https"
-                      }
-                    ]
-                  },
-                  "access": {
-                    "type": "string",
-                    "description": "%teamstoolkit.taskDefinitions.args.access.title%",                    
-                    "oneOf": [
-                      {
-                        "const": "public"
-                      }
-                    ]
+                      "additionalProperties": false
+                    }
                   },
                   "env": {
                     "type": "string",
@@ -1020,24 +1052,6 @@
                       },
                       {}
                     ]
-                  },
-                  "output": {
-                    "type": "object",
-                    "description": "%teamstoolkit.taskDefinitions.args.output.title%",
-                    "properties": {
-                      "domain": {
-                        "type": "string",
-                        "description": "%teamstoolkit.taskDefinitions.args.output.domain.title%"
-                      },
-                      "endpoint": {
-                        "type": "string",
-                        "description": "%teamstoolkit.taskDefinitions.args.output.endpoint.title%"
-                      },
-                      "id": {
-                        "type": "string",
-                        "description": "%teamstoolkit.taskDefinitions.args.output.id.title%"
-                      }
-                    }
                   }
                 },
                 "additionalProperties": false
@@ -1062,7 +1076,8 @@
                     "type": "string",
                     "description": "%teamstoolkit.taskDefinitions.args.template.title%"
                   }
-                }
+                },
+                "additionalProperties": false
               }
             ]
           }
